# Brickbreaker

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Notes.md  main.cpp  main.h
assets/sounds/: 09-bossa-nova.mid
cmake/: PGE.cmake  shell_minimal.html  template.html
engine/: AudioManager.cpp  AudioManager.h  Clay_Renderer_PGE.cpp  Clay_Renderer_PGE.h  GameState.cpp  GameState.h  SaveManager.cpp  SaveManager.h  engine.cpp  engine.h  guuid.h
lib/: miniaudio_libopus.c  miniaudio_libopus.h  miniaudio_libvorbis.c  miniaudio_libvorbis.h  olcPGEX_MiniAudio.h  olcPixelGameEngine.h
ui/: GameOverMenu.cpp  GameOverMenu.h  Hud.cpp  Hud.h  MainMenu.cpp  MainMenu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h
